Refactoring: remove typos

--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -48,9 +48,8 @@
     {} % empty
     {
       \begin{cvitems} % Description(s)
-        \item {Многопоточкая модель работы}
+        \item {Многопоточная модель работы}
         \item {Наличие авторизации}
-        \item {Реализован в терминале}
       \end{cvitems}
     }
     \cventry
