--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -17,7 +17,7 @@
 %---------------------------------------------------------
   \cvskill
     {Java} % Category
-    {Gson, Jackson, SLF4J, Log4j, Logback, Junit, Mockito, Bucket4j, Hibernate, JDBC} % Skills
+    {Gson, Jackson, SLF4J, Log4j, Logback, Junit, Mockito, Bucket4j, Hibernate, JDBC, password4j, Hikaricp} % Skills
 
 %---------------------------------------------------------
   \cvskill
